--- a/meus-posts/style.scss
+++ b/meus-posts/style.scss
@@ -177,7 +177,6 @@ button:hover {
     }
     p {
       font-size: 1rem;
-      margin-right: 10vw;
     }
   }
 }
